Přidání správy položek a úpravy zobrazení v EvidenceZisku
V souboru `Polozka.cs` byly přidány nové privátní proměnné `naklady` a `vynosy`. Byly přidány dva konstruktory, jeden bez parametrů a druhý s parametry `datum`, `naklady`, `vynosy` a `popis`. Vlastnosti `Naklady` a `Vynosy` byly upraveny tak, aby zaokrouhlovaly a vracely absolutní hodnoty. Vlastnost `Zisk` byla upravena tak, aby zaokrouhlovala výsledek na dvě desetinná místa.

V souboru `EvidenceZisku.razor` byla přidána injekce `IJSRuntime`. Byla přidána podmínka pro zobrazení tlačítka "Ukončit editaci" nebo "Přidat" podle stavu `IsEditace`. Byla přidána tabulka pro zobrazení seznamu položek s možností mazání a úpravy položek.

V souboru `EvidenceZisku.razor.cs` byla přidána injekce `Microsoft.JSInterop`. Byla přidána třída `EvidenceZisku` s popisem. Byly přidány vlastnosti `Polozky`, `Polozka` a `IsEditace`. Byly přidány metody `PridatPolozku`, `SmazatPolozku`, `UpravitPolozku` a `UkoncitEditaci` pro správu položek v seznamu.

--- a/Ct1300_Evidence/Pages/EvidenceZisku.razor
+++ b/Ct1300_Evidence/Pages/EvidenceZisku.razor
@@ -1,5 +1,5 @@
 ﻿@page "/evidence"
-
+@inject IJSRuntime JavaScript
 <PageTitle>Evidence</PageTitle>
 
 <h1>Evidence!</h1>
@@ -9,8 +9,59 @@
 	<label>Náklady: <input type="number" @bind="Polozka.Naklady" /></label>
 	<label>Výnosy: <input type="number" @bind="Polozka.Vynosy" /></label>
 	<label>Popis: <input type="text" @bind="Polozka.Popis" /></label>
-	<button type="button" class="btn btn-success">Přidat</button>
+    @if (IsEditace)
+    {
+        <button @onclick="UkoncitEditaci" type="button" class="btn btn-primary">Ukončit editaci</button>
+    }
+    else
+	{
+	    <button @onclick="PridatPolozku" type="button" class="btn btn-success">Přidat</button>
+	}
 </div>
+
+<div class="my-2">
+	@if (!Polozky.Any())
+	{
+		<p>Nejsou zatím žádné záznamy</p>
+	}
+	else
+	{
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Datum</th>
+                    <th>Náklady</th>
+                    <th>Výnosy</th>
+					<th>Zisk</th>
+					<th>Popis</th>
+                    <th>Smazat</th>
+                    <th>Editace</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Polozky)
+                {
+                    <tr>
+                        <td>@item.Datum</td>
+                        <td>@item.Naklady</td>
+                        <td>@item.Vynosy</td>
+						<td>@item.Zisk</td>
+						<td>@item.Popis</td>
+                        <td>
+                            <button @onclick="()=>SmazatPolozku(item)" type="button" class="btn btn-outline-danger">&times;</button>
+                        </td>
+                        <td>
+                            <button @onclick="()=>UpravitPolozku(item)"  type="button" class="btn btn-outline-info">&plusmn;</button>
+                        </td>
+                    </tr>
+                }
+                
+               
+            </tbody>
+        </table>
+	}
+</div>
+
 
 @code {
 
